# soyerBOT

./: .env  .gitignore  basique.py  db_config.py  jeux.py  main.py  main2.py  profile.py  profile.txt  profilePartage.py  valorant.py  weapon.py
game/: jeux.py  jeux2.py  maj_weapon.py  valorant.py
profile/: profile.py  profilePartage.py
repository/: listGuildRepository.py  logRepository.py  messageRepository.py  message_deleteRepository.py  message_editRepository.py  token_discordRepository.py  utilisateurRepository.py  utilisateurs_guildsRepository.py
rust-bot/: .env.example  .gitignore  Cargo.toml  README.md
rust-bot/src/: database.rs  events.rs  main.rs  utils.rs
rust-bot/src/commands/: basic.rs  games.rs  mod.rs  profile.rs  spam.rs  valorant.rs
spam/: repeat.py
