[package]
name = "soyer-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework", "voice"] }
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
image = "0.24"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
chrono = "0.4"
async-trait = "0.1"
once_cell = "1.18" 